# harm_bench

./: README.md  main.py  pyproject.toml
dataset/: harmful_prompts.parquet
harm_bench/: harm_bench_gemma_4.py  harm_bench_qwen3_5.py  harm_bench_qwen3_vl.py  requirements.txt
