[project]
name = "harm-bench"
version = "0.1.0"
description = "Harm Bench Evaluator is a specialized, experimental testing framework designed to assess the safety, compliance, and abliteration levels of large language models."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "fastapi>=0.136.0",
    "huggingface-hub>=1.11.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
